# lanmigrate

./: .gitignore  IMPLEMENTATION_PLAN.md  M0-迁移指南.md  README.md  entry.py  filters.txt  migrate.ps1  prd.md  pyproject.toml
.github/workflows/: build-release.yml
gui/: package-lock.json  package.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
gui/ui/: index.html  main.js  style.css
lanmigrate/: __init__.py  cli.py  discovery.py  engine.py  ipc.py  pairing.py  preflight.py  rclone_bin.py  rules.toml  scanner.py  taskstore.py
tests/: test_discovery.py  test_engine.py  test_ipc.py  test_pairing.py  test_preflight.py  test_rclone_bin.py  test_scanner.py  test_taskstore.py  test_versions.py
