[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lanmigrate"
version = "0.2.0"
description = "LAN migration tool with resume and smart dependency exclusion (rclone engine)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "zeroconf>=0.130",
]

[project.scripts]
lanmigrate = "lanmigrate.cli:app"

[tool.setuptools]
packages = ["lanmigrate"]

[tool.setuptools.package-data]
lanmigrate = ["rules.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
