[package]
name = "lanmigrate-gui"
version = "0.5.0"
description = "LanMigrate desktop GUI (LAN migration with resume)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[profile.release]
strip = true
lto = true
